--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
-<p>Estás siendo redireccionado a la página principal.</p>
-<script>
-    setTimeout(window.location.href = "i/inicio.php", 500);
-</script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Cagando...</title>
+</head>
+<body>
+    <p>Espera...</p>
+    <script> setTimeout(window.location.href = "i/inicio.php", 500); </script>
+</body>
+</html>
